@@ -7,6 +7,7 @@ import org.apache.olingo.odata2.api.exception.ODataNotFoundException;
 import org.apache.olingo.odata2.api.processor.ODataResponse;
 import org.apache.olingo.odata2.api.uri.info.DeleteUriInfo;
 import org.apache.olingo.odata2.api.uri.info.GetEntitySetUriInfo;
+import org.apache.olingo.odata2.api.uri.info.GetEntityUriInfo;
 import org.apache.olingo.odata2.api.uri.info.PostUriInfo;
 import org.apache.olingo.odata2.api.uri.info.PutMergePatchUriInfo;
 import org.apache.olingo.odata2.jpa.processor.api.ODataJPAContext;
@@ -19,7 +20,8 @@ import org.slf4j.LoggerFactory;
 import java.io.InputStream;
 import java.util.List;
 
-public class CustomODataJpaProcessor extends ODataJPADefaultProcessor  {
+public class CustomODataJpaProcessor extends ODataJPADefaultProcessor {
+
     private Logger logger = LoggerFactory.getLogger(getClass());
 
     public CustomODataJpaProcessor(ODataJPAContext oDataJPAContext) {
@@ -28,7 +30,7 @@ public class CustomODataJpaProcessor extends ODataJPADefaultProcessor  {
     }
 
     @Override
-    public ODataResponse readEntitySet(final GetEntitySetUriInfo uriParserResultView, final String contentType) throws ODataJPAModelException, ODataJPARuntimeException, EdmException, EdmException {
+    public ODataResponse readEntitySet(final GetEntitySetUriInfo uriParserResultView, final String contentType) throws ODataJPAModelException, ODataJPARuntimeException, EdmException {
         logger.info("READ: Entity Set {} called", uriParserResultView.getTargetEntitySet().getName());
         try {
             List<Object> jpaEntities = jpaProcessor.process(uriParserResultView);
@@ -38,23 +40,16 @@ public class CustomODataJpaProcessor extends ODataJPADefaultProcessor  {
         }
     }
 
-
-    public ODataResponse readEntity(final GetEntitySetUriInfo uriParserResultView, final String contentType)
-            throws ODataJPAModelException, ODataJPARuntimeException, ODataNotFoundException, EdmException {
+    @Override
+    public ODataResponse readEntity(final GetEntityUriInfo uriParserResultView, final String contentType) throws ODataJPAModelException, ODataJPARuntimeException, ODataNotFoundException, EdmException {
         ODataResponse response = null;
         if (uriParserResultView.getKeyPredicates().size() > 1) {
-            logger.info("READ: Entity {} called with a key {} and key {}",
-                    uriParserResultView.getTargetEntitySet().getName(),
-                    uriParserResultView.getKeyPredicates().get(0).getLiteral(),
-                    uriParserResultView.getKeyPredicates().get(1).getLiteral());
+            logger.info("READ: Entity {} called with key {} and key {}", uriParserResultView.getTargetEntitySet().getName(), uriParserResultView.getKeyPredicates().get(0).getLiteral(), uriParserResultView.getKeyPredicates().get(1).getLiteral());
         } else {
-            logger.info("READ: Entity {} called with a key {}",
-                    uriParserResultView.getTargetEntitySet().getName(),
-                    uriParserResultView.getKeyPredicates().getFirst().getLiteral());
+            logger.info("READ: Entity {} called with key {}", uriParserResultView.getTargetEntitySet().getName(), uriParserResultView.getKeyPredicates().get(0).getLiteral());
         }
-
         try {
-            List<Object> readEntity = jpaProcessor.process(uriParserResultView);
+            Object readEntity = jpaProcessor.process(uriParserResultView);
             response = responseBuilder.build(uriParserResultView, readEntity, contentType);
         } finally {
             this.close();
@@ -62,6 +57,7 @@ public class CustomODataJpaProcessor extends ODataJPADefaultProcessor  {
         return response;
     }
 
+    @Override
     public ODataResponse createEntity(final PostUriInfo uriParserResultView, final InputStream content, final String requestContentType, final String contentType) throws ODataJPAModelException, ODataJPARuntimeException, ODataNotFoundException, EdmException, EntityProviderException {
         logger.info("POST: Entity {} called", uriParserResultView.getTargetEntitySet().getName());
         ODataResponse response = null;
@@ -74,11 +70,12 @@ public class CustomODataJpaProcessor extends ODataJPADefaultProcessor  {
         return response;
     }
 
+
+
+    @Override
     public ODataResponse updateEntity(final PutMergePatchUriInfo uriParserResultView, final InputStream content,
                                       final String requestContentType, final boolean merge, final String contentType) throws ODataException, ODataJPAModelException, ODataJPARuntimeException, ODataNotFoundException {
-        logger.info("PUT: Entity {} called with a key {}",
-                uriParserResultView.getTargetEntitySet().getName(),
-                uriParserResultView.getKeyPredicates().getFirst().getLiteral());
+        logger.info("PUT: Entity {} called with key {}", uriParserResultView.getTargetEntitySet().getName(), uriParserResultView.getKeyPredicates().get(0).getLiteral());
         ODataResponse response = null;
         try {
             Object updatedEntity = jpaProcessor.process(uriParserResultView, content, requestContentType);
@@ -89,10 +86,9 @@ public class CustomODataJpaProcessor extends ODataJPADefaultProcessor  {
         return response;
     }
 
+    @Override
     public ODataResponse deleteEntity(DeleteUriInfo uriParserResultView, String contentType) throws ODataException {
-        logger.info("DELETE: Entity {} called with a key {}",
-                uriParserResultView.getTargetEntitySet().getName(),
-                uriParserResultView.getKeyPredicates().getFirst().getLiteral());
+        logger.info("DELETE: Entity {} called with key {}", uriParserResultView.getTargetEntitySet().getName(), uriParserResultView.getKeyPredicates().get(0).getLiteral());
         ODataResponse oDataResponse = null;
         try {
             this.oDataJPAContext.setODataContext(this.getContext());
